# text-builder-core

./: BENCHMARK_RESULTS  text-builder-core.cabal  text-builder-dev.cabal
.github/workflows/: format-and-test.yaml
bench/: Main.hs
test/: Features.hs  Main.hs
test/Features/: StrictBuilder.hs  StrictTextBuilder.hs
test/Util/: ExtraInstances.hs  TestTrees.hs
