cabal-version: 3.0
name: text-builder-core
version: 0.1.0.1
category: Text, Builders
synopsis: Internals of "text-builder"
description:
  Core functionality of \"text-builder\" with guts exposed for efficient custom integrations.

  Consider this to be what you'll find in the \"Internal\" modules of packages violating PVP. You'll find more on this in [a blog post](https://nikita-volkov.github.io/internal-convention-is-a-mistake/).

homepage: https://github.com/nikita-volkov/text-builder-core
bug-reports: https://github.com/nikita-volkov/text-builder-core/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2022, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/text-builder-core

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

library
  import: base
  hs-source-dirs: library
  exposed-modules: TextBuilderCore
  other-modules:
    TextBuilderCore.Prelude
    TextBuilderCore.Utf16View
    TextBuilderCore.Utf16View.Unicode
    TextBuilderCore.Utf8View

  build-depends:
    QuickCheck >=2.14 && <3,
    base >=4.11 && <5,
    text >=1.2 && <3,

test-suite test
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Features
    Util.ExtraInstances
    Util.TestTrees

  build-depends:
    QuickCheck >=2.14 && <3,
    base >=4.11 && <5,
    quickcheck-classes >=0.6.5 && <0.7,
    quickcheck-instances >=0.3.32 && <0.4,
    tasty >=1.2.3 && <2,
    tasty-quickcheck ^>=0.11,
    text >=1.2 && <3,
    text-builder-core,

benchmark bench
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -with-rtsopts=-A32m
    -with-rtsopts=-T
    -fproc-alignment=64

  main-is: Main.hs
  build-depends:
    base >=4.11 && <5,
    tasty-bench ^>=0.4.1,
    text >=2.1.2 && <3,
    text-builder-core,
    text-builder-linear ^>=0.1.3,
